@@ -1,7 +1,3 @@
-// eCos memory layout - Fri Oct 20 08:40:39 2000
-
-// This is a generated file - do not edit
-
 #include <cyg/infra/cyg_type.inc>
 
 MEMORY
@@ -23,9 +19,12 @@ SECTIONS
     SECTION_eh_frame (rom, ALIGN (0x4), LMA_EQ_VMA)
     SECTION_rel__got (rom, ALIGN (0x1), LMA_EQ_VMA)
     SECTION_gcc_except_table (rom, ALIGN (0x1), LMA_EQ_VMA)
-    SECTION_data (ram, 0x02000000, LMA_EQ_VMA)
-    SECTION_sbss (ram, ALIGN (0x4), LMA_EQ_VMA)
-    SECTION_bss (ram, ALIGN (0x10), LMA_EQ_VMA)
+    .tls 0x02000000 : {
+        *(.tls.*)
+    } > ram 
+    SECTION_data (ram, 0x02000100,    LMA_EQ_VMA)
+    SECTION_sbss (ram, ALIGN (0x4) ,  LMA_EQ_VMA)
+    SECTION_bss (ram,  ALIGN (0x10),  LMA_EQ_VMA)
     CYG_LABEL_DEFN(__heap1) = ALIGN (0x10);
     SECTIONS_HEAP(ram, __heap1, 0x02800000)
     SECTIONS_END
